# NaikAVPlayer

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  help.md  imgui.ini
.github/: COMMIT_MESSAGE_GUIDELINES.md  PULL_REQUEST_TEMPLATE.md  RECOMMENDED_LABELS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md  question_support.md
.github/workflows/: ci.yml  release.yml
assets/fonts/: OFL.txt
licenses/: FFMPEG_CREDITS.txt  LICENSE.nfd  LICENSE.winpthread
src/: AudioDecoder.cpp  AudioDecoder.hpp  Demuxer.cpp  Demuxer.hpp  MetricRing.hpp  PipelineMetrics.hpp  PlayerController.cpp  PlayerController.hpp  PlayerUI.cpp  PlayerUI.hpp  ThreadSafeQueue.hpp  VideoDecoder.cpp  VideoDecoder.hpp  app.manifest  main.cpp  resource.rc
tests/: generate_cppcheck_report.py  generate_xls_report.py  lsan.supp  tests.cpp  tsan.supp
